# odin

./: .gitignore  LICENSE  README.md
backend/: go.mod  go.sum  pyproject.toml
backend/app/: app.go  interfaces.go
backend/backend/: app.py  config.py
backend/backend/models/: __init__.py  base.py  machine.py
backend/backend/routes/: __init__.py  machine.py
backend/backend/serializers/: machine.py
backend/cmd/backend/: main.go
backend/http/: machine.go
backend/postgres/: machine.go  postgres.go  schema.go
frontend/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
frontend/src/: .babelrc  index.html  index.less
frontend/src/app/: app.js  app.tsx  constants.ts  root-reducer.js  root-reducer.ts  store.js
frontend/src/app/components/: buttons.js  buttons.tsx  cpu-bar.js  cpu-bar.tsx  cpu-information.js  cpu-information.tsx  error.js  error.tsx  layout.js  layout.tsx  loading.tsx  memory-information.js  menu.js  (+14 more)
odin/: package.json  pyproject.toml
odin/odin/: config.py  endpoints.py  main.py  routes.py
odin/odin/system/: exceptions.py  filters.py  monitor.py
odin/src/: index.ts  system.ts
odin/src/routes/: index.ts  processes.ts  system.ts  terminal.ts
rustymon/: .gitignore  pyproject.toml
rustymon/frontend/: package-lock.json  package.json
rustymon/frontend/components/: system-preview.js
rustymon/frontend/hooks/: use-websocket.js
rustymon/frontend/pages/: index.js
rustymon/frontend/src/: index.js
rustymon/rustymon/: main.py
rustymon/rustymon/system/: filters.py  monitor.py
rustymon/tests/: test_rustymon.py
(+36 files in other folders)
