[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["viegasdomdev <viegasdomdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
sqlalchemy = "^1.3.16"
pydantic = "^1.4"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-comprehensions = "^3.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
