[tool.poetry]
name = "odin"
version = "0.1.0"
description = ""
authors = ["viegasdom <viegasdomdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.7.0"
uvicorn = "^0.11.3"
starlette = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-comprehensions = "^3.2.2"
flake8-bugbear = "^20.1.4"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
